# citenote

./: .gitignore  config.json  papers.yaml  requirements.txt  setup.cfg  tox.ini
server/: .citenote  __init__.py  logger.yaml
server/models/: citenote.sql  citenote_clean.sql  data_models.py  users.py  users.sql
server/routes/: home.py  manuscripts.py  papers.py  users.py
server/util/: CitenoteError.py  database.py  db.py  helper.py  logger.py  set_config.py
server/util/helper/: __init__.py  __main.py  __users.py  helper_citations.py  helper_main.py  helper_manuscripts.py  helper_models.py  helper_papers.py  helper_users.py
