[metadata]
name = citenote
version = file: VERSION
description = Application server to manage citation and their notes.
author = Yashodhan Ketkar
author_email = kykyashodhan@gmail.com
classifiers = 
    Development Status :: 3 - Alpha
    Intended Audience :: Developers and Testers
    Topic :: Manuscript writing
    Programming Language :: Python :: 3.10
keywords = Research paper, manuscript writing, WebApp

[options]
package_dir = 
    = server
packages.find=
    where = server
python_requires => 3.10

[flake8]
max-line-length = 120